trunk/Archive2/85/49a17d466ee3e7/output
main.cpp: In function 'auto& Foo()':
main.cpp:5:13: error: invalid initialization of non-const reference of type 'double*&' from an rvalue of type 'double*'
     return &pi;
             ^
