trunk/Archive2/85/49a17d466ee3e7/main.cpp
#include <iostream>

auto& Foo() {
    double pi = 3.14159;
    return &pi;
}

int main() {
   const auto& pi = Foo();
   std::cout << *pi;
}